# variable-maker-langgraph

./: .gitignore  README.md  chat_handler.py  cli.py  graph.py  main.py  models.py  nodes.py  pyproject.toml  services.py  tools.py  ui_components.py  utils.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routers/: variable.py
backend/app/schemas/: __init__.py  variable.py
backend/app/services/: langgraph_service.py  text_processing_service.py  translation_service.py
backend/app/utils/: nodes.py  tools.py
frontend/src/: app.py
frontend/src/compnents/: chat.py  guide.py  input.py  sidebar.py
frontend/src/config/: settings.py
frontend/src/handlers/: chat_handler.py
frontend/src/models/: chat_models.py
frontend/src/utils/: api_client.py  helpers.py
src/: __init__.py
src/core/: __init__.py  graph.py  models.py  nodes.py  services.py
src/ui/: __init__.py  app.py  components.py  handlers.py
src/utils/: __init__.py  helpers.py
