[project]
name = "variable-maker-langgraph"
version = "1.0.0"
description = "AI-powered variable name generator using LangGraph and Streamlit"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.27",
    "langchain-google-genai>=2.1.8",
    "langgraph>=0.6.0",
    "python-dotenv>=1.1.1",
    "streamlit>=1.48.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
]
